src/objects/caTissueSchedulerDetails__c.object
<CustomObject>
    <fields>
        <fullName>IsJobCompleted__c</fullName>
        <defaultValue>false</defaultValue>
        <label>IsJobCompleted</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>JobId__c</fullName>
        <label>JobId</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>OperationType__c</fullName>
        <label>OperationType</label>
        <picklist>
            <picklistValues>
                <fullName>createParticipant</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>createSpecimen</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <label>caTissueSchedulerDetails</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>caTissueSchedulerDetails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>